--- a/pages/about.html
+++ b/pages/about.html
@@ -73,33 +73,139 @@
           />
         </div>
       </section>
-    <section class="values">
-      <div class="values-container container">
-        <h2 class="values-container__title title">Our core values</h2>
-        <p class="values-container__subtitle subtitle">Our mission is to set the highest standards for construction
-          sphere.</p>
-        <ul class="values-list">
-          <li class="values-list__item">
-            <img src="../assets/icons/additional icons/ic-like.svg" alt="Quality">
-            <h3 class="item__title title">Quality</h3>
-            <p class="item__text subtitle">Culpa nostrud commodo ea consequat aliquip reprehenderit. Veniam velit
-              nostrud aliquip sunt.</p>
-          </li>
-          <li class="values-list__item">
-            <img src="../assets/icons/additional icons/ic-hand.svg" alt="Safety">
-            <h3 class="item__title title">Safety</h3>
-            <p class="item__text subtitle">Anim reprehenderit sint voluptate exercitation adipisicing laborum
-              adipisicing. Minim empor est ea.</p>
-          </li>
-          <li class="values-list__item">
-            <img src="../assets/icons/additional icons/ic-slippers.svg" alt="Comfort">
-            <h3 class="item__title title">Comfort</h3>
-            <p class="item__text subtitle">Sit veniam aute dolore adipisicing nulla sit culpa. Minim mollit voluptate
-              ullamco proident ea ad.</p>
-          </li>
-        </ul>
-      </div>
-    </section>
+      <section class="statistics">
+        <div class="statistics-container container">
+          <ul class="statistics__list">
+            <li class="statistics__item">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="44"
+                height="40"
+                viewBox="0 0 44 40"
+                fill="none"
+              >
+                <path
+                  d="M42.0166 21.7188C42.6859 20.9716 43.0938 19.9853 43.0938 18.9062C43.0938 16.5803 41.2009 14.6875 38.875 14.6875H30.6869C31.4978 12.2266 31.8438 8.96125 31.8438 7.56156V6.15625C31.8438 3.055 29.32 0.53125 26.2188 0.53125H24.8125C24.1675 0.53125 23.605 0.97 23.4484 1.59625L22.6825 4.66094C21.6091 8.95281 18.2013 13.6881 14.6744 14.5487C14.0566 12.985 12.5312 11.875 10.75 11.875H2.3125C1.53625 11.875 0.90625 12.505 0.90625 13.2812V38.5938C0.90625 39.37 1.53625 40 2.3125 40H10.75C12.4272 40 13.8784 39.0166 14.5581 37.5953L19.39 39.2059C20.9697 39.7328 22.6159 40 24.2819 40H36.0625C38.3884 40 40.2812 38.1072 40.2812 35.7812C40.2812 35.2328 40.1763 34.7078 39.985 34.2269C41.7738 33.7384 43.0938 32.0987 43.0938 30.1562C43.0938 29.0772 42.6859 28.0909 42.0166 27.3438C42.6859 26.5966 43.0938 25.6103 43.0938 24.5312C43.0938 23.4522 42.6859 22.4659 42.0166 21.7188ZM12.1562 35.7812C12.1562 36.5566 11.5253 37.1875 10.75 37.1875H3.71875V14.6875H10.75C11.5253 14.6875 12.1562 15.3184 12.1562 16.0938V35.7812ZM36.0625 23.125H38.875C39.6503 23.125 40.2812 23.7559 40.2812 24.5312C40.2812 25.3066 39.6503 25.9375 38.875 25.9375H36.0625C35.2863 25.9375 34.6562 26.5675 34.6562 27.3438C34.6562 28.12 35.2863 28.75 36.0625 28.75H38.875C39.6503 28.75 40.2812 29.3809 40.2812 30.1562C40.2812 30.9316 39.6503 31.5625 38.875 31.5625H36.0625C35.2863 31.5625 34.6562 32.1925 34.6562 32.9688C34.6562 33.745 35.2863 34.375 36.0625 34.375C36.8378 34.375 37.4688 35.0059 37.4688 35.7812C37.4688 36.5566 36.8378 37.1875 36.0625 37.1875H24.2819C22.9187 37.1875 21.5716 36.9691 20.2787 36.5378L14.9688 34.7678V17.3669C17.1747 16.9478 19.3337 15.5509 21.2828 13.2644C23.1859 11.0313 24.7291 8.07063 25.4106 5.34344L25.9103 3.34375H26.2188C27.7694 3.34375 29.0312 4.60563 29.0312 6.15625V7.56156C29.0312 9.44969 28.4406 13.0712 27.685 14.6875H24.8125C24.0362 14.6875 23.4062 15.3175 23.4062 16.0938C23.4062 16.87 24.0362 17.5 24.8125 17.5H38.875C39.6503 17.5 40.2812 18.1309 40.2812 18.9062C40.2812 19.6816 39.6503 20.3125 38.875 20.3125H36.0625C35.2863 20.3125 34.6562 20.9425 34.6562 21.7188C34.6562 22.495 35.2863 23.125 36.0625 23.125Z"
+                  fill="#9A9CA5"
+                />
+              </svg>
+              <h2 class="item__title title">60%</h2>
+              <p class="item__subtitle subtitle">
+                Clients on the recommendation of friends
+              </p>
+            </li>
+            <li class="statistics__item">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="48"
+                height="48"
+                viewBox="0 0 48 48"
+                fill="none"
+              >
+                <path
+                  d="M39.5625 4.21875C39.5625 1.89258 37.6699 0 35.3438 0H7.21875C4.89258 0 3 1.89258 3 4.21875V12.6562C3 14.9824 4.89258 16.875 7.21875 16.875H35.3438C37.6699 16.875 39.5625 14.9824 39.5625 12.6562V11.25H40.9688C41.744 11.25 42.375 11.881 42.375 12.6562V18.2812C42.375 19.0565 41.744 19.6875 40.9688 19.6875H24.0938C21.7676 19.6875 19.875 21.5801 19.875 23.9062V28.125H18.4688C17.692 28.125 17.0625 28.7545 17.0625 29.5312V35.0797L15.6562 40.7955C14.7418 44.4529 17.5052 48 21.2812 48C25.0591 48 27.8196 44.4492 26.9077 40.8007L25.5 35.0797V29.5312C25.5 28.7545 24.8705 28.125 24.0938 28.125H22.6875V23.9062C22.6875 23.131 23.3185 22.5 24.0938 22.5H40.9688C43.2949 22.5 45.1875 20.6074 45.1875 18.2812V12.6562C45.1875 10.3301 43.2949 8.4375 40.9688 8.4375H39.5625V4.21875ZM22.6875 30.9375V33.8438H19.875V30.9375H22.6875ZM21.2812 45.1875C19.344 45.1875 17.9117 43.3693 18.386 41.4727L19.571 36.6562H22.9915L24.1776 41.4778C24.6486 43.3612 23.2255 45.1875 21.2812 45.1875ZM7.21875 2.8125H35.3438C36.119 2.8125 36.75 3.44348 36.75 4.21875V5.625H32.5312C31.1646 5.625 29.417 6.13696 27.3933 6.72949C24.6599 7.53003 21.5621 8.4375 18.4688 8.4375C15.4534 8.4375 13.3275 7.55676 11.4518 6.78003C10.0177 6.18604 8.66345 5.625 7.21875 5.625H5.8125V4.21875C5.8125 3.44348 6.44348 2.8125 7.21875 2.8125ZM36.75 12.6562C36.75 13.4315 36.119 14.0625 35.3438 14.0625H7.21875C6.44348 14.0625 5.8125 13.4315 5.8125 12.6562V8.4375H7.21875C8.10388 8.4375 9.10657 8.85278 10.3755 9.3783C12.3885 10.2122 14.8938 11.25 18.4688 11.25C21.9657 11.25 25.4132 10.24 28.184 9.42883C29.9242 8.91907 31.5681 8.4375 32.5312 8.4375H36.75V12.6562Z"
+                  fill="#9A9CA5"
+                />
+              </svg>
+              <h2 class="item__title title">2400+</h2>
+              <p class="item__subtitle subtitle">Apartments renovated</p>
+            </li>
+            <li class="statistics__item">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="48"
+                height="38"
+                viewBox="0 0 48 38"
+                fill="none"
+              >
+                <path
+                  d="M45.1875 29.0856V24.625C45.1875 19.9949 43.6945 15.594 40.87 11.8982C38.3629 8.61756 34.8964 6.10159 31.026 4.73163C30.9183 2.50066 29.0697 0.71875 26.8125 0.71875H21.1875C18.9303 0.71875 17.0817 2.50066 16.974 4.73163C13.1036 6.10159 9.63713 8.61756 7.12997 11.8982C4.30547 15.594 2.8125 19.9949 2.8125 24.625V29.0856C1.17572 29.6661 0 31.2292 0 33.0625C0 35.3887 1.89253 37.2812 4.21875 37.2812H43.7812C46.1075 37.2812 48 35.3887 48 33.0625C48 31.2292 46.8243 29.6661 45.1875 29.0856ZM5.625 24.625C5.625 19.554 7.79119 14.8068 11.3438 11.4198V16.1875C11.3438 16.9641 11.9734 17.5938 12.75 17.5938C13.5266 17.5938 14.1562 16.9641 14.1562 16.1875V9.21409C15.0424 8.64841 15.9822 8.15491 16.9688 7.74419V19C16.9688 19.7766 17.5984 20.4062 18.375 20.4062C19.1516 20.4062 19.7812 19.7766 19.7812 19V5.77487C19.7813 5.77103 19.7812 5.76719 19.7812 5.76334V4.9375C19.7812 4.16209 20.4121 3.53125 21.1875 3.53125H26.8125C27.5879 3.53125 28.2188 4.16209 28.2188 4.9375V5.76297C28.2188 5.767 28.2187 5.77094 28.2188 5.77497V19C28.2188 19.7766 28.8484 20.4062 29.625 20.4062C30.4016 20.4062 31.0312 19.7766 31.0312 19V7.74419C32.0178 8.155 32.9576 8.6485 33.8438 9.21409V16.1875C33.8438 16.9641 34.4734 17.5938 35.25 17.5938C36.0266 17.5938 36.6562 16.9641 36.6562 16.1875V11.4198C40.2088 14.8068 42.375 19.554 42.375 24.625V28.8438H5.625V24.625ZM43.7812 34.4688H4.21875C3.44334 34.4688 2.8125 33.8379 2.8125 33.0625C2.8125 32.2871 3.44334 31.6562 4.21875 31.6562H43.7812C44.5567 31.6562 45.1875 32.2871 45.1875 33.0625C45.1875 33.8379 44.5567 34.4688 43.7812 34.4688Z"
+                  fill="#9A9CA5"
+                />
+              </svg>
+              <h2 class="item__title title">670</h2>
+              <p class="item__subtitle subtitle">Qualified specialists</p>
+            </li>
+            <li class="statistics__item">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="49"
+                height="48"
+                viewBox="0 0 49 48"
+                fill="none"
+              >
+                <g clip-path="url(#clip0_1499_1692)">
+                  <path
+                    d="M10.4375 33.8438C8.11128 33.8438 6.21875 35.7363 6.21875 38.0625C6.21875 40.3887 8.11128 42.2812 10.4375 42.2812C12.7637 42.2812 14.6562 40.3887 14.6562 38.0625C14.6562 35.7363 12.7637 33.8438 10.4375 33.8438ZM10.4375 39.4688C9.66209 39.4688 9.03125 38.8379 9.03125 38.0625C9.03125 37.2871 9.66209 36.6562 10.4375 36.6562C11.2129 36.6562 11.8438 37.2871 11.8438 38.0625C11.8438 38.8379 11.2129 39.4688 10.4375 39.4688Z"
+                    fill="#9A9CA5"
+                  />
+                  <path
+                    d="M45.9619 28.569C46.9212 27.2708 47.098 25.4603 46.2256 23.9496L40.6035 14.118C39.631 12.4335 37.5801 11.6648 35.7507 12.1538C36.1402 10.4029 35.3759 8.52441 33.7423 7.58119L24 1.95656C22.6087 1.15313 20.9451 1.23544 19.6657 2.02678C18.9242 0.812437 17.5865 0 16.0625 0H4.71875C2.39253 0 0.5 1.89253 0.5 4.21875C0.5 5.19422 0.5 42.6583 0.5 43.7812C0.5 46.1075 2.39253 48 4.71875 48C5.81122 48 38.9345 48 44.2812 48C46.6075 48 48.5 46.1075 48.5 43.7812V32.4375C48.5 30.7085 47.454 29.2197 45.9619 28.569ZM17.4688 43.7812C17.4688 44.5567 16.8379 45.1875 16.0625 45.1875H4.71875C3.94334 45.1875 3.3125 44.5567 3.3125 43.7812C3.3125 43.1388 3.3125 31.6483 3.3125 31.0312H17.4688V43.7812ZM17.4688 28.2188H3.3125V16.875H17.4688V28.2188ZM17.4688 14.0625H3.3125V4.21875C3.3125 3.44334 3.94334 2.8125 4.71875 2.8125H16.0625C16.8379 2.8125 17.4688 3.44334 17.4688 4.21875V14.0625ZM20.2812 5.5845L20.6723 4.90716C21.0602 4.23544 21.9222 4.00444 22.5938 4.39228L32.336 10.0169C33.0077 10.4047 33.2386 11.2667 32.8498 11.9403L31.2249 14.7647C31.1842 14.8248 31.1476 14.8872 31.1169 14.9524L20.2812 33.787V5.5845ZM20.2812 39.427L33.4271 16.5767L36.1452 15.0074C36.8342 14.6096 37.7793 14.8512 38.165 15.5192L43.7871 25.3507C44.176 26.0242 43.9492 26.8877 43.2688 27.2805C42.2645 27.8618 21.2702 40.0161 20.2812 40.5886V39.427ZM45.6875 43.7812C45.6875 44.5567 45.0567 45.1875 44.2812 45.1875H20.0394C20.1893 44.7647 20.2734 44.3113 20.2798 43.8393L42.4034 31.0312H44.2812C45.0567 31.0312 45.6875 31.6621 45.6875 32.4375V43.7812Z"
+                    fill="#9A9CA5"
+                  />
+                </g>
+                <defs>
+                  <clipPath id="clip0_1499_1692">
+                    <rect
+                      width="48"
+                      height="48"
+                      fill="white"
+                      transform="translate(0.5)"
+                    />
+                  </clipPath>
+                </defs>
+              </svg>
+              <h2 class="item__title title">150000+ <span>m2</span></h2>
+              <p class="item__subtitle subtitle">
+                Finishing work was carried out
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="values">
+        <div class="values-container container">
+          <h2 class="values-container__title title">Our core values</h2>
+          <p class="values-container__subtitle subtitle">
+            Our mission is to set the highest standards for construction sphere.
+          </p>
+          <ul class="values-list">
+            <li class="values-list__item">
+              <img
+                src="../assets/icons/additional icons/ic-like.svg"
+                alt="Quality"
+              />
+              <h3 class="item__title title">Quality</h3>
+              <p class="item__text subtitle">
+                Culpa nostrud commodo ea consequat aliquip reprehenderit. Veniam
+                velit nostrud aliquip sunt.
+              </p>
+            </li>
+            <li class="values-list__item">
+              <img
+                src="../assets/icons/additional icons/ic-hand.svg"
+                alt="Safety"
+              />
+              <h3 class="item__title title">Safety</h3>
+              <p class="item__text subtitle">
+                Anim reprehenderit sint voluptate exercitation adipisicing
+                laborum adipisicing. Minim empor est ea.
+              </p>
+            </li>
+            <li class="values-list__item">
+              <img
+                src="../assets/icons/additional icons/ic-slippers.svg"
+                alt="Comfort"
+              />
+              <h3 class="item__title title">Comfort</h3>
+              <p class="item__text subtitle">
+                Sit veniam aute dolore adipisicing nulla sit culpa. Minim mollit
+                voluptate ullamco proident ea ad.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
       <section class="application">
         <div class="application-container container">
           <form action="" class="aplication__form">
