add quotation section html

--- a/pages/about.html
+++ b/pages/about.html
@@ -163,6 +163,27 @@
           </ul>
         </div>
       </section>
+      <section class="quotation">
+        <div class="quotation-container container">
+          <img src="../assets/team/seo.jpg" alt="SEO" />
+          <article class="quotation__content">
+            <p class="quotation__text">
+              Dapibus nec vitae ante mattis. Aliquam phasellus ac dui augue in.
+              Sed aliquet in egestas hac at proin sed quam. Etiam aliquet
+              sagittis non, massa cum pulvinar. Et in leo, tempus purus
+              vestibulum ut blandit et mi. Odio massa purus vel praesent arcu
+              enim elit felis viverra. Magna aliquam interdum mattis ipsum arcu.<br><br>
+              Elit odio elit viverra quis metus amet eleifend amet. Vet
+              suspendisse faucibus tempor ipsum integer.
+            </p>
+            <div class="quotation__name-position">
+                  <h4 class="name-position__name title">Courtney Alexander</h4>
+                  <p class="name-position__position subtitle">CEO - Createx Construction Bureau </p>
+            </div>
+            <img src="../assets/team/signature.svg" alt="signature">
+          </article>
+        </div>
+      </section>
       <section class="values">
         <div class="values-container container">
           <h2 class="values-container__title title">Our core values</h2>
