add quotation section styles

--- a/pages/about.html
+++ b/pages/about.html
@@ -165,22 +165,41 @@
       </section>
       <section class="quotation">
         <div class="quotation-container container">
-          <img src="../assets/team/seo.jpg" alt="SEO" />
+          <img src="../assets/team/seo.jpg" alt="SEO" class="quotation__img" />
           <article class="quotation__content">
+            <svg class="quotation__braces"
+              xmlns="http://www.w3.org/2000/svg"
+              width="28"
+              height="20"
+              viewBox="0 0 28 20"
+              fill="none"
+            >
+              <path
+                d="M18 8.92534C18 8.63119 18.1295 8.35196 18.3541 8.16195L28 0V19C28 19.5523 27.5523 20 27 20H19C18.4477 20 18 19.5523 18 19V8.92534Z"
+                fill="#FF5A30"
+              />
+              <path
+                d="M0 8.92534C0 8.63119 0.129507 8.35196 0.354058 8.16195L10 0V19C10 19.5523 9.55228 20 9 20H1C0.447715 20 0 19.5523 0 19V8.92534Z"
+                fill="#FF5A30"
+              />
+            </svg>
             <p class="quotation__text">
               Dapibus nec vitae ante mattis. Aliquam phasellus ac dui augue in.
               Sed aliquet in egestas hac at proin sed quam. Etiam aliquet
               sagittis non, massa cum pulvinar. Et in leo, tempus purus
               vestibulum ut blandit et mi. Odio massa purus vel praesent arcu
-              enim elit felis viverra. Magna aliquam interdum mattis ipsum arcu.<br><br>
+              enim elit felis viverra. Magna aliquam interdum mattis ipsum
+              arcu.<br /><br />
               Elit odio elit viverra quis metus amet eleifend amet. Vet
               suspendisse faucibus tempor ipsum integer.
             </p>
             <div class="quotation__name-position">
-                  <h4 class="name-position__name title">Courtney Alexander</h4>
-                  <p class="name-position__position subtitle">CEO - Createx Construction Bureau </p>
+              <h4 class="name-position__name title">Courtney Alexander</h4>
+              <p class="name-position__position subtitle">
+                CEO - Createx Construction Bureau
+              </p>
             </div>
-            <img src="../assets/team/signature.svg" alt="signature">
+            <img src="../assets/team/signature.svg" alt="signature" class="quotation__signature"/>
           </article>
         </div>
       </section>
