add map section html

--- a/pages/about.html
+++ b/pages/about.html
@@ -55,7 +55,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <>
       <section class="page-title">
         <div class="page-title__container container">
           <div class="breadcrumb">
@@ -441,13 +441,12 @@
           </div>
         </div>
       </section>
-      <div class="team">
+      <section class="team">
         <div class="team-container container">
           <h2 class="team__title title">Our team</h2>
           <p class="team__subtitle subtitle">
             People are at the heart of Createx Construction Bureau
           </p>
-
           <ul class="team__list">
             <li class="team__item">
               <img src="../assets/team/image-7.png" alt="team profile" />
@@ -930,7 +929,13 @@
             >
           </p>
         </div>
-      </div>
+      </section>
+      <section class="map">
+            <div class="map-container container">
+                  <h2 class="map__title title">We work worldwide</h2>
+                  <img src="../assets/background/map.png" alt="map" class="map__img">
+            </div>
+      </section>
       <section class="application">
         <div class="application-container container">
           <form action="" class="aplication__form">
