add map section styles

--- a/pages/about.html
+++ b/pages/about.html
@@ -55,7 +55,7 @@
         </div>
       </div>
     </header>
-    <>
+    <main>
       <section class="page-title">
         <div class="page-title__container container">
           <div class="breadcrumb">
@@ -451,8 +451,8 @@
             <li class="team__item">
               <img src="../assets/team/image-7.png" alt="team profile" />
               <div class="item__content">
-                    <h3 class="item__name">Courtney Alexander</h3>
-                    <p class="item__positioin">CEO, Co-Founder</p>
+                <h3 class="item__name">Courtney Alexander</h3>
+                <p class="item__positioin">CEO, Co-Founder</p>
               </div>
               <ul class="item__social">
                 <li class="social__item">
@@ -562,8 +562,8 @@
                 </li>
               </ul>
               <div class="item__content">
-                    <h3 class="item__name">Calvin Fox</h3>
-                    <p class="item__positioin">CTO, Co-Founder</p>
+                <h3 class="item__name">Calvin Fox</h3>
+                <p class="item__positioin">CTO, Co-Founder</p>
               </div>
             </li>
             <li class="team__item">
@@ -621,8 +621,8 @@
                 </li>
               </ul>
               <div class="item__content">
-                    <h3 class="item__name">Johnny Lane</h3>
-                    <p class="item__positioin">Commercial Manager</p>
+                <h3 class="item__name">Johnny Lane</h3>
+                <p class="item__positioin">Commercial Manager</p>
               </div>
             </li>
             <li class="team__item">
@@ -680,8 +680,8 @@
                 </li>
               </ul>
               <div class="item__content">
-                    <h3 class="item__name">Diane Mccoy</h3>
-                    <p class="item__positioin">Director of Human Resources</p>
+                <h3 class="item__name">Diane Mccoy</h3>
+                <p class="item__positioin">Director of Human Resources</p>
               </div>
             </li>
             <li class="team__item">
@@ -739,8 +739,8 @@
                 </li>
               </ul>
               <div class="item__content">
-                    <h3 class="item__name">Judith Warren</h3>
-                    <p class="item__positioin">Lead Accountant</p>
+                <h3 class="item__name">Judith Warren</h3>
+                <p class="item__positioin">Lead Accountant</p>
               </div>
             </li>
             <li class="team__item">
@@ -798,8 +798,8 @@
                 </li>
               </ul>
               <div class="item__content">
-                    <h3 class="item__name">Floyd Simmmons</h3>
-                    <p class="item__positioin">Finacial Director</p>
+                <h3 class="item__name">Floyd Simmmons</h3>
+                <p class="item__positioin">Finacial Director</p>
               </div>
             </li>
             <li class="team__item">
@@ -857,8 +857,8 @@
                 </li>
               </ul>
               <div class="item__content">
-                    <h3 class="item__name">Serenity Edwards</h3>
-                    <p class="item__positioin">Director of Marketing</p>
+                <h3 class="item__name">Serenity Edwards</h3>
+                <p class="item__positioin">Director of Marketing</p>
               </div>
             </li>
             <li class="team__item">
@@ -916,8 +916,8 @@
                 </li>
               </ul>
               <div class="item__content">
-                    <h3 class="item__name">Shawn Edwards</h3>
-                    <p class="item__positioin">Tech Lead</p>
+                <h3 class="item__name">Shawn Edwards</h3>
+                <p class="item__positioin">Tech Lead</p>
               </div>
             </li>
           </ul>
@@ -931,10 +931,10 @@
         </div>
       </section>
       <section class="map">
-            <div class="map-container container">
-                  <h2 class="map__title title">We work worldwide</h2>
-                  <img src="../assets/background/map.png" alt="map" class="map__img">
-            </div>
+        <div class="map-container container">
+          <h2 class="map__title title">We work worldwide</h2>
+          <img src="../assets/background/map.png" alt="map" class="map__img" />
+        </div>
       </section>
       <section class="application">
         <div class="application-container container">
