add benefits section

--- a/pages/availablePosition.html
+++ b/pages/availablePosition.html
@@ -338,6 +338,52 @@
           </div>
         </div>
       </section>
+      <section class="benefits benefits-white">
+        <div class="benefits-container container">
+          <h2 class="benefits__title title">Employee benefits</h2>
+          <p class="benefits__subtitle subtitle">
+            There’s always room for talent.
+          </p>
+          <ul class="benefits__list">
+            <li class="benefits__item">
+              <img
+                src="../assets/icons/additional icons/ic-brain.svg"
+                alt="contract"
+                class="item__icon"
+              />
+              <h3 class="item__title title">Training</h3>
+              <p class="item__subtitle subtitle">
+                Culpa nostrud commodo ea consequat aliquip reprehenderit. Veniam
+                velit nostrud aliquip sunt.
+              </p>
+            </li>
+            <li class="benefits__item">
+              <img
+                src="../assets/icons/additional icons/ic-success.svg"
+                alt="contract"
+                class="item__icon"
+              />
+              <h3 class="item__title title">Professional Growth</h3>
+              <p class="item__subtitle subtitle">
+                Anim reprehenderit sint voluptate exercitation adipisicing
+                laborum adipisicing. Minim empor est ea.
+              </p>
+            </li>
+            <li class="benefits__item">
+              <img
+                src="../assets/icons/additional icons/ic-budget.svg"
+                alt="contract"
+                class="item__icon"
+              />
+              <h3 class="item__title title">Growing Salary</h3>
+              <p class="item__subtitle subtitle">
+                Sit veniam aute dolore adipisicing nulla sit culpa. Minim mollit
+                voluptate ullamco proident ea ad.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
       <section class="application">
         <div class="application-container container">
           <form action="" class="aplication__form">
