add subscribe modal html

--- a/pages/availablePosition.html
+++ b/pages/availablePosition.html
@@ -632,5 +632,19 @@
         </svg>
       </a>
     </div>
+    <div class="modal-bg"></div>
+    <div class="modal-subscribe modal">
+      <button class="modal-subscribe modal-close"><img src="../assets/icons/plus minus cross/Cross.svg" alt="close"></button>
+      <h2 class="modal-subscribe__title title">Subscribe to our newsletter</h2>
+      <div class="modal-subscribe__input-name input-block">
+        <label for="modal-subscribe__input-name">Name*</label>
+        <input type="text" name="modal-subscribe__input-name" placeholder="Your name">
+      </div>
+      <div class="modal-subscribe__input-email input-block">
+        <label for="modal-subscribe__input-email">Email*</label>
+        <input type="text" name="modal-subscribe__input-email" placeholder="Your working email">
+      </div>
+      <button class="modal-subscribe-btn btn l-btn">send</button>
+    </div>
   </body>
 </html>
