add send cv modal html

--- a/pages/availablePosition.html
+++ b/pages/availablePosition.html
@@ -658,6 +658,63 @@
       </div>
       <button class="modal-subscribe-btn btn l-btn">send</button>
     </div>
+    <div class="modal-cv modal" id="modal-cv">
+      <button class="modal-subscribe__close modal-close">
+        <img src="../assets/icons/plus minus cross/Cross.svg" alt="close" />
+      </button>
+      <h2 class="modal-cv__title title">Send your CV</h2>
+      <div class="modal-subscribe__input-name input-block">
+        <label for="modal-subscribe__input-name">Name*</label>
+        <input
+          type="text"
+          name="modal-subscribe__input-name"
+          placeholder="Your name"
+        />
+    </div>
+      <div class="modal-subscribe__input-phone input-block">
+        <label for="modal-subscribe__input-phone">Location*</label>
+        <input
+          type="number"
+          name="modal-subscribe__input-phone"
+          placeholder="Your phone number"
+        >
+      </div>
+      <div class="modal-subscribe__input-location input-block">
+        <label for="modal-subscribe__input-location">Location*</label>
+        <select
+          name="modal-subscribe__input-location"
+        >
+        <option value="Russia">Russia</option>
+        <option value="France">France</option>
+        <option value="Germany">Germany</option>
+      </select>
+      </div>
+      <div class="modal-subscribe__input-email input-block">
+        <label for="modal-subscribe__input-email">Email*</label>
+        <input
+          type="text"
+          name="modal-subscribe__input-email"
+          placeholder="Your working email"
+        />
+      </div>
+      <div class="modal-subscribe__input-email input-block">
+        <label for="modal-subscribe__input-email">Сovering letter</label>
+        <textarea
+          type="text"
+          name="modal-subscribe__input-email"
+          placeholder="Your covering letter"
+        />
+      </div>
+      <div class="modal-subscribe__input-file input-block">
+        <label for="modal-subscribe__input-email">Attach your CV*</label>
+        <textarea
+          type="file"
+          name="modal-subscribe__input-email"
+          placeholder="Your covering letter"
+        />
+      </div>
+      <button class="modal-subscribe-btn btn l-btn">send</button>
+    </div>
   </body>
   <script src="../scripts/index.js"></script>
 </html>
