--- a/pages/availablePosition.html
+++ b/pages/availablePosition.html
@@ -670,24 +670,22 @@
           name="modal-subscribe__input-name"
           placeholder="Your name"
         />
-    </div>
+      </div>
       <div class="modal-subscribe__input-phone input-block">
         <label for="modal-subscribe__input-phone">Location*</label>
         <input
           type="number"
           name="modal-subscribe__input-phone"
           placeholder="Your phone number"
-        >
+        />
       </div>
       <div class="modal-subscribe__input-location input-block">
         <label for="modal-subscribe__input-location">Location*</label>
-        <select
-          name="modal-subscribe__input-location"
-        >
-        <option value="Russia">Russia</option>
-        <option value="France">France</option>
-        <option value="Germany">Germany</option>
-      </select>
+        <select name="modal-subscribe__input-location">
+          <option value="Russia">Russia</option>
+          <option value="France">France</option>
+          <option value="Germany">Germany</option>
+        </select>
       </div>
       <div class="modal-subscribe__input-email input-block">
         <label for="modal-subscribe__input-email">Email*</label>
@@ -711,7 +709,7 @@
           type="file"
           name="modal-subscribe__input-email"
           placeholder="Your covering letter"
-        />
+        ></textarea>
       </div>
       <button class="modal-subscribe-btn btn l-btn">send</button>
     </div>
